--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-google-maps/api": "^2.20.8",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "bad-words": "^4.0.0",
     "bad-words-next": "^3.2.0",
     "bcryptjs": "^3.0.3",
@@ -35,12 +39,14 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
