--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,26 +1,20 @@
-name: Unit Tests
-
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+name: Event App Tests
+on: [push, pull_request]
 
 jobs:
-  test:
+  run-tests:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 20
+      - name: Install
+        run: npm install
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      - name: Unit Tests
+        run: npm run test:unit
 
-      - name: Run tests
-        run: npm test
+      - name: Integration Tests
+        run: npm run test:integration
