--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
