--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
